Changed Layout, Added AuctioContext, added Registration page, added some Nuget packages, added default connection string for database.

--- a/SilentAuction/Views/Home/About.cshtml
+++ b/SilentAuction/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>@ViewData["Title"]</h2>
 
-<p>Use this area to provide additional information.</p>
+<h4>Description:</h4>
+<p>This is a Group Project website for the CS 3750 class at Weber State University Summer Semester 2017</p>
+
+<h4>Team Members:</h4>
+<p>Andrew, Daniel, Greg, Kevin</p>
