--- a/SilentAuction/wwwroot/css/site.css
+++ b/SilentAuction/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 75px;
+}
+
+.spacer {
+    margin-top: 40px; /* define margin as you see fit */
 }
 
 /* Wrapping element */
@@ -8,13 +12,6 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-}
-
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
 }
 
 /* Carousel */
