--- a/SilentAuction/Views/Items/Create.cshtml
+++ b/SilentAuction/Views/Items/Create.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Create</h2>
@@ -13,10 +12,16 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="ItemName" class="col-md-2 control-label"></label>
+            <label asp-for="SponsorId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="ItemName" class="form-control" />
-                <span asp-validation-for="ItemName" class="text-danger"></span>
+                <select asp-for="SponsorId" class ="form-control" asp-items="ViewBag.SponsorId"></select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Name" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
@@ -27,10 +32,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="ItemType" class="col-md-2 control-label"></label>
+            <label asp-for="Type" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="ItemType" class="form-control" />
-                <span asp-validation-for="ItemType" class="text-danger"></span>
+                <input asp-for="Type" class="form-control" />
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
