--- a/SilentAuction/Views/Media/Index.cshtml
+++ b/SilentAuction/Views/Media/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<SilentAuction.Models.Item>
+@model IEnumerable<SilentAuction.Models.Media>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,19 +13,13 @@
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
+                    @Html.DisplayNameFor(model => model.FileName)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Type)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RetailPrice)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartingBid)
+                    @Html.DisplayNameFor(model => model.Content)
                 </th>
             <th></th>
         </tr>
@@ -34,19 +28,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.FileName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RetailPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartingBid)
+                @Html.DisplayFor(modelItem => item.Content)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
