--- a/SilentAuction/Views/Shared/_Layout.cshtml
+++ b/SilentAuction/Views/Shared/_Layout.cshtml
@@ -37,9 +37,20 @@
             </div>
 
             <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Auctions" asp-action="Index">Auctions</a></li>
+                    <li><a asp-area="" asp-controller="Listings" asp-action="Index">Listings</a></li>
+                    <li><a asp-area="" asp-controller="Items" asp-action="Index"><span class="glyphicon glyphicon-plus"></span>Items</a></li>
+                    <li><a asp-area="" asp-controller="Media" asp-action="Index">Medias</a></li>
+                    <li><a asp-area="" asp-controller="Sponsors" asp-action="Index">Sponsors</a></li>
+                    <li><a asp-area="" asp-controller="BidHistories" asp-action="Index">BidHistories</a></li>
+                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+                </ul>
+            </div>
+
+            <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a asp-area="" asp-controller="Home" asp-action="Registration"><span class="glyphicon glyphicon-user"></span>Registration</a></li>
-                    <li><a asp-area="" asp-controller="Items" asp-action="Index"><span class="glyphicon glyphicon-plus"></span>Add Items</a></li>
                 </ul>
             </div>
         </div>
