--- a/SilentAuction/Views/Sponsors/Delete.cshtml
+++ b/SilentAuction/Views/Sponsors/Delete.cshtml
@@ -1,4 +1,4 @@
-@model SilentAuction.Models.Item
+@model SilentAuction.Models.Sponsor
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Item</h4>
+    <h4>Sponsor</h4>
     <hr />
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="Id" />
@@ -19,28 +19,16 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.StartDate)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.StartDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.Phone)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.RetailPrice)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.RetailPrice)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.StartingBid)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.StartingBid)
+            @Html.DisplayFor(model => model.Phone)
         </dd>
     </dl>
     
