--- a/SilentAuction/Views/Sponsors/Index.cshtml
+++ b/SilentAuction/Views/Sponsors/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<SilentAuction.Models.Item>
+@model IEnumerable<SilentAuction.Models.Sponsor>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,16 +16,10 @@
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Description)
+                    @Html.DisplayNameFor(model => model.StartDate)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Type)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RetailPrice)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartingBid)
+                    @Html.DisplayNameFor(model => model.Phone)
                 </th>
             <th></th>
         </tr>
@@ -37,16 +31,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RetailPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartingBid)
+                @Html.DisplayFor(modelItem => item.Phone)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
