--- a/SilentAuction/Views/Auctions/Index.cshtml
+++ b/SilentAuction/Views/Auctions/Index.cshtml
@@ -13,14 +13,14 @@
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ListingId)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.StartDate)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.EndDate)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Listing)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -28,13 +28,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ListingId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EndDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Listing.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
