--- a/SilentAuction/Views/Shared/_Layout.cshtml
+++ b/SilentAuction/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     <li><a asp-area="" asp-controller="Auctions" asp-action="Index">Auctions</a></li>
                     <li><a asp-area="" asp-controller="Listings" asp-action="Index">Listings</a></li>
                     <li><a asp-area="" asp-controller="Items" asp-action="Index"><span class="glyphicon glyphicon-plus"></span>Items</a></li>
-                    <li><a asp-area="" asp-controller="Media" asp-action="Index">Medias</a></li>
+                    <li><a asp-area="" asp-controller="Media" asp-action="Index">Media</a></li>
                     <li><a asp-area="" asp-controller="Sponsors" asp-action="Index">Sponsors</a></li>
                     <li><a asp-area="" asp-controller="BidHistories" asp-action="Index">BidHistories</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
