--- a/SilentAuction/Views/Auctions/Edit.cshtml
+++ b/SilentAuction/Views/Auctions/Edit.cshtml
@@ -13,9 +13,9 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
         <div class="form-group">
-            <label asp-for="ListingId" class="col-md-2 control-label"></label>
+            <label asp-for="ListingId" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <input asp-for="ListingId" class="form-control" />
+                <select asp-for="ListingId" class="form-control" asp-items="ViewBag.ListingId"></select>
                 <span asp-validation-for="ListingId" class="text-danger"></span>
             </div>
         </div>
