Added Navigation Properties to the foreign key Ids

--- a/SilentAuction/Views/BidHistories/Index.cshtml
+++ b/SilentAuction/Views/BidHistories/Index.cshtml
@@ -13,14 +13,17 @@
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ListingId)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.Date)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Amount)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Listing)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.User)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -28,13 +31,16 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ListingId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Listing.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.Email)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
