--- a/SilentAuction/Views/BidHistories/Create.cshtml
+++ b/SilentAuction/Views/BidHistories/Create.cshtml
@@ -20,8 +20,7 @@
         <div class="form-group">
             <label asp-for="ListingId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="ListingId" class="form-control" />
-                <span asp-validation-for="ListingId" class="text-danger"></span>
+                <select asp-for="ListingId" class ="form-control" asp-items="ViewBag.ListingId"></select>
             </div>
         </div>
         <div class="form-group">
