--- a/SilentAuction/Views/BidHistories/Delete.cshtml
+++ b/SilentAuction/Views/BidHistories/Delete.cshtml
@@ -13,12 +13,6 @@
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="Id" />
         <dt>
-            @Html.DisplayNameFor(model => model.ListingId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ListingId)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd>
@@ -29,6 +23,18 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Amount)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Listing)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Listing.Id)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
     </dl>
     
