--- a/SilentAuction/Views/BidHistories/Details.cshtml
+++ b/SilentAuction/Views/BidHistories/Details.cshtml
@@ -11,12 +11,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ListingId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ListingId)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd>
@@ -27,6 +21,18 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Amount)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Listing)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Listing.Id)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
     </dl>
 </div>
