--- a/SilentAuction/Views/BidHistories/Edit.cshtml
+++ b/SilentAuction/Views/BidHistories/Edit.cshtml
@@ -20,9 +20,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="ListingId" class="col-md-2 control-label"></label>
+            <label asp-for="ListingId" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <input asp-for="ListingId" class="form-control" />
+                <select asp-for="ListingId" class="form-control" asp-items="ViewBag.ListingId"></select>
                 <span asp-validation-for="ListingId" class="text-danger"></span>
             </div>
         </div>
