--- a/SilentAuction/Views/Items/Delete.cshtml
+++ b/SilentAuction/Views/Items/Delete.cshtml
@@ -42,6 +42,12 @@
         <dd>
             @Html.DisplayFor(model => model.StartingBid)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Sponsor)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Sponsor.Name)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
