--- a/SilentAuction/Views/Items/Index.cshtml
+++ b/SilentAuction/Views/Items/Index.cshtml
@@ -27,6 +27,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.StartingBid)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Sponsor)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -47,6 +50,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartingBid)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Sponsor.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
