--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -22,6 +22,12 @@
         <dd>
             @Html.DisplayFor(model => model.Increment)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Item)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Item.Name)
+        </dd>
     </dl>
 </div>
 <div>
