I fixed Auction to have many listings. And put the Auction as a foreign key in Listing. Now, both BidHistory and Listing Index pages should not work because they don't Auctions/Items, User/Items associated.

--- a/SilentAuction/Views/Listings/Create.cshtml
+++ b/SilentAuction/Views/Listings/Create.cshtml
@@ -12,6 +12,12 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
+            <label asp-for="AuctionId" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <select asp-for="AuctionId" class ="form-control" asp-items="ViewBag.AuctionId"></select>
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="ItemId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <select asp-for="ItemId" class ="form-control" asp-items="ViewBag.ItemId"></select>
