--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Increment)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Auction)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Auction.Id)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Item)
         </dt>
         <dd>
