--- a/SilentAuction/Views/Listings/Delete.cshtml
+++ b/SilentAuction/Views/Listings/Delete.cshtml
@@ -25,6 +25,12 @@
             @Html.DisplayFor(model => model.Increment)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Auction)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Auction.Id)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Item)
         </dt>
         <dd>
