--- a/SilentAuction/Views/Listings/Edit.cshtml
+++ b/SilentAuction/Views/Listings/Edit.cshtml
@@ -13,6 +13,13 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
         <div class="form-group">
+            <label asp-for="AuctionId" class="control-label col-md-2"></label>
+            <div class="col-md-10">
+                <select asp-for="AuctionId" class="form-control" asp-items="ViewBag.AuctionId"></select>
+                <span asp-validation-for="AuctionId" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="ItemId" class="control-label col-md-2"></label>
             <div class="col-md-10">
                 <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId"></select>
