--- a/SilentAuction/Views/Home/Index.cshtml
+++ b/SilentAuction/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                     @Html.DisplayFor(modelItem => item.EndDate)
                 </td>
                 <td>
-                    <a asp-controller="Auction" asp-action="SilentAuction" asp-route-id="@item.Id">Auction Page</a>
+                    <a asp-controller="Auctions" asp-action="SilentAuction" asp-route-id="@item.Id">Auction Page</a>
                 </td>
             </tr>
         }
