Fixed the AuctionViewModel with Eager loading, added a Role for User, fixed user create/edit to display role in the list. Deleted Migrations. We don't need them. Added Ensurecreated to make sure the database is created.

--- a/SilentAuction/Views/Users/Delete.cshtml
+++ b/SilentAuction/Views/Users/Delete.cshtml
@@ -43,10 +43,10 @@
             @Html.DisplayFor(model => model.Password)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Type)
+            @Html.DisplayFor(model => model.Role)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.AutoBidAmt)
