--- a/SilentAuction/Views/Users/Index.cshtml
+++ b/SilentAuction/Views/Users/Index.cshtml
@@ -28,7 +28,7 @@
                     @Html.DisplayNameFor(model => model.Password)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Type)
+                    @Html.DisplayNameFor(model => model.Role)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.AutoBidAmt)
@@ -55,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Type)
+                @Html.DisplayFor(modelItem => item.Role)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AutoBidAmt)
