--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -21,6 +21,7 @@
                             <li>Starting Bid: @Html.DisplayFor(modelItem => listing.StartingBid)</li>
                             <li>Increment: @Html.DisplayFor(modelItem => listing.Increment)</li>
                             <li>@Html.DisplayFor(modelItem => listing.ItemId)</li>
+                            <li>@Html.DisplayFor(modelItem => listing.Item.Description)</li>
                         </ul>
                     </div>
                 </div>
