--- a/SilentAuction/Views/Users/Details.cshtml
+++ b/SilentAuction/Views/Users/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Password)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Type)
+            @Html.DisplayFor(model => model.Role)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.AutoBidAmt)
