--- a/SilentAuction/Views/Users/Edit.cshtml
+++ b/SilentAuction/Views/Users/Edit.cshtml
@@ -1,4 +1,5 @@
-@model SilentAuction.Models.User
+@using SilentAuction.ViewModels;
+@model CreateOrEditUserViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -11,33 +12,33 @@
         <h4>User</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="UserId" />
+    <input type="hidden" asp-for="User.UserId" />
         <div class="form-group">
-            <label asp-for="FirstName" class="col-md-2 control-label"></label>
+            <label asp-for="User.FirstName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <input asp-for="User.FirstName" class="form-control" />
+                <span asp-validation-for="User.FirstName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="LastName" class="col-md-2 control-label"></label>
+            <label asp-for="User.LastName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <input asp-for="User.LastName" class="form-control" />
+                <span asp-validation-for="User.LastName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <label asp-for="User.Email" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <input asp-for="User.Email" class="form-control" />
+                <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Phone" class="col-md-2 control-label"></label>
+            <label asp-for="User.Phone" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
+                <input asp-for="User.Phone" class="form-control" />
+                <span asp-validation-for="User.Phone" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
@@ -48,17 +49,17 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Type" class="col-md-2 control-label"></label>
+            <label asp-for="User.RoleId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="Type" class="form-control"></select>
-                <span asp-validation-for="Type" class="text-danger"></span>
+                <select asp-for="User.RoleId" asp-items="Model.Roles" class="form-control"></select>
+                <span asp-validation-for="User.RoleId" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="AutoBidAmt" class="col-md-2 control-label"></label>
+            <label asp-for="User.AutoBidAmt" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="AutoBidAmt" class="form-control" />
-                <span asp-validation-for="AutoBidAmt" class="text-danger"></span>
+                <input asp-for="User.AutoBidAmt" class="form-control" />
+                <span asp-validation-for="User.AutoBidAmt" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
