Added Catagory to the Item model and added them to context and seed then changed the views of item to display CatagoryId instead of type (What catagory replaces) Now need to make a viewmodel, change the Items controller and views to display the correct catagory in a selectlist.

--- a/SilentAuction/Views/Items/Details.cshtml
+++ b/SilentAuction/Views/Items/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.CatagoryId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Type)
+            @Html.DisplayFor(model => model.CatagoryId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RetailPrice)
