--- a/SilentAuction/Views/Items/Create.cshtml
+++ b/SilentAuction/Views/Items/Create.cshtml
@@ -32,10 +32,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CatagoryId" class="col-md-2 control-label"></label>
+            <label asp-for="Catagory" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="CatagoryId" class="form-control" />
-                <span asp-validation-for="CatagoryId" class="text-danger"></span>
+                <input asp-for="Catagory.Name" class="form-control" />
+                <span asp-validation-for="Catagory.Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
