--- a/SilentAuction/Views/Items/Index.cshtml
+++ b/SilentAuction/Views/Items/Index.cshtml
@@ -19,7 +19,7 @@
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.CatagoryId)
+                    @Html.DisplayNameFor(model => model.Catagory)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.RetailPrice)
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CatagoryId)
+                @Html.DisplayFor(modelItem => item.Catagory.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RetailPrice)
