Fixed the dropdown list in the create/edit views of Items.

--- a/SilentAuction/Views/Users/Delete.cshtml
+++ b/SilentAuction/Views/Users/Delete.cshtml
@@ -46,7 +46,7 @@
             @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Role)
+            @Html.DisplayFor(model => model.Role.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.AutoBidAmt)
