--- a/SilentAuction/Views/Users/Index.cshtml
+++ b/SilentAuction/Views/Users/Index.cshtml
@@ -55,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Role)
+                @Html.DisplayFor(modelItem => item.Role.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AutoBidAmt)
