--- a/SilentAuction/Views/Items/Edit.cshtml
+++ b/SilentAuction/Views/Items/Edit.cshtml
@@ -34,10 +34,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Catagory" class="col-md-2 control-label"></label>
+            <label asp-for="CatagoryId" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <input asp-for="Catagory.Name" class="form-control" />
-                <span asp-validation-for="Catagory.Name" class="text-danger"></span>
+                <select asp-for="CatagoryId" class="form-control" asp-items="ViewBag.CatagoryId"></select>
+                <span asp-validation-for="CatagoryId" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
