--- a/SilentAuction/Views/Users/Details.cshtml
+++ b/SilentAuction/Views/Users/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Role)
+            @Html.DisplayFor(model => model.Role.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.AutoBidAmt)
