--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -1,4 +1,5 @@
-@model SilentAuction.Models.Listing
+@using SilentAuction.ViewModels
+@model ListingViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -26,13 +27,13 @@
             @Html.DisplayNameFor(model => model.Auction)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Auction.Id)
+            @Html.DisplayFor(model => model.Auction)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Item)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Item.Name)
+            @Html.DisplayFor(model => model.Item)
         </dd>
     </dl>
 </div>
