--- a/SilentAuction/Views/Listings/Edit.cshtml
+++ b/SilentAuction/Views/Listings/Edit.cshtml
@@ -1,4 +1,5 @@
-@model SilentAuction.Models.Listing
+@using SilentAuction.ViewModels
+@model ListingViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,17 +14,17 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
         <div class="form-group">
-            <label asp-for="AuctionId" class="control-label col-md-2"></label>
+            <label asp-for="Auction" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <select asp-for="AuctionId" class="form-control" asp-items="ViewBag.AuctionId"></select>
-                <span asp-validation-for="AuctionId" class="text-danger"></span>
+                <select asp-for="Auction" class="form-control" asp-items="Model.Auctions"></select>
+                <span asp-validation-for="Auction" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="ItemId" class="control-label col-md-2"></label>
+            <label asp-for="Item" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <select asp-for="ItemId" class="form-control" asp-items="ViewBag.ItemId"></select>
-                <span asp-validation-for="ItemId" class="text-danger"></span>
+                <select asp-for="Item" class="form-control" asp-items="Model.Items"></select>
+                <span asp-validation-for="Item" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
