--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -54,10 +54,11 @@
                     </div>
                     <div class="media-body">
                         <ul>
-                            <li>Starting Bid: @Html.DisplayFor(modelItem => listing.Item.Name)</li>
+                            <li>Minimum Bid: @Html.DisplayFor(modelItem => listing.StartingBid)</li>
+                            <li>Retail Value: @Html.DisplayFor(modelItem => listing.Item.RetailPrice)</li>
+                            <li>@Html.DisplayFor(modelItem => listing.Item.Name)</li>
                             <li>@Html.DisplayFor(modelItem => listing.Item.Description)</li>
-                            <li>Increment: @Html.DisplayFor(modelItem => listing.StartingBid)</li>
-                            <li>@Html.DisplayFor(modelItem => listing.ItemId)</li>
+                            <li>Bidding Increment: @Html.DisplayFor(modelItem => listing.Increment)</li>                      
                         </ul>
                     </div>
                 </div>
