Changed all instances of StartingBid to MinimumBid. Added labels for Create and Edit listing views so Minimum Bid wasn't displayed as MinimumBid.

--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -54,7 +54,7 @@
                     </div>
                     <div class="media-body">
                         <ul>
-                            <li>Minimum Bid: @Html.DisplayFor(modelItem => listing.StartingBid)</li>
+                            <li>Minimum Bid: @Html.DisplayFor(modelItem => listing.MinimumBid)</li>
                             <li>Retail Value: @Html.DisplayFor(modelItem => listing.Item.RetailPrice)</li>
                             <li>@Html.DisplayFor(modelItem => listing.Item.Name)</li>
                             <li>@Html.DisplayFor(modelItem => listing.Item.Description)</li>
