--- a/SilentAuction/Views/Listings/Delete.cshtml
+++ b/SilentAuction/Views/Listings/Delete.cshtml
@@ -14,10 +14,10 @@
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="Id" />
         <dt>
-            @Html.DisplayNameFor(model => model.StartingBid)
+            @Html.DisplayNameFor(model => model.MinimumBid)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.StartingBid)
+            @Html.DisplayFor(model => model.MinimumBid)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Increment)
