--- a/SilentAuction/Views/Listings/Index.cshtml
+++ b/SilentAuction/Views/Listings/Index.cshtml
@@ -14,7 +14,7 @@
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.StartingBid)
+                    @Html.DisplayNameFor(model => model.MinimumBid)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Increment)
@@ -32,7 +32,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.StartingBid)
+                @Html.DisplayFor(modelItem => item.MinimumBid)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Increment)
