--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.StartingBid)
+            @Html.DisplayNameFor(model => model.MinimumBid)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.StartingBid)
+            @Html.DisplayFor(model => model.MinimumBid)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Increment)
