--- a/SilentAuction/Views/Listings/Edit.cshtml
+++ b/SilentAuction/Views/Listings/Edit.cshtml
@@ -14,28 +14,28 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
         <div class="form-group">
-            <label asp-for="Auction" class="control-label col-md-2"></label>
+            <label asp-for="Auction" class="control-label col-md-2">Auction:</label>
             <div class="col-md-10">
                 <select asp-for="Auction" class="form-control" asp-items="Model.Auctions"></select>
                 <span asp-validation-for="Auction" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Item" class="control-label col-md-2"></label>
+            <label asp-for="Item" class="control-label col-md-2">Item:</label>
             <div class="col-md-10">
                 <select asp-for="Item" class="form-control" asp-items="Model.Items"></select>
                 <span asp-validation-for="Item" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="StartingBid" class="col-md-2 control-label"></label>
+            <label asp-for="MinimumBid" class="col-md-2 control-label">Minimum Bid:</label>
             <div class="col-md-10">
-                <input asp-for="StartingBid" class="form-control" />
-                <span asp-validation-for="StartingBid" class="text-danger"></span>
+                <input asp-for="MinimumBid" class="form-control" />
+                <span asp-validation-for="MinimumBid" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Increment" class="col-md-2 control-label"></label>
+            <label asp-for="Increment" class="col-md-2 control-label">Bidding Increment:</label>
             <div class="col-md-10">
                 <input asp-for="Increment" class="form-control" />
                 <span asp-validation-for="Increment" class="text-danger"></span>
