--- a/SilentAuction/Views/Shared/_Layout.cshtml
+++ b/SilentAuction/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                     <li><a asp-area="" asp-controller="Listings" asp-action="Index">Listings</a></li>
                     <li><a asp-area="" asp-controller="Items" asp-action="Index"><span class="glyphicon glyphicon-plus"></span>Items</a></li>
                     <li><a asp-area="" asp-controller="Sponsors" asp-action="Index">Sponsors</a></li>
+                    <li><a asp-area="" asp-controller="Catagories" asp-action="Index">Catagories</a></li>
                     <li><a asp-area="" asp-controller="BidHistories" asp-action="Index">BidHistories</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
                 </ul>
